# picam360-capture

./: .gitignore  .project  CMakeLists.txt  Copyright.txt  Makefile  Makefile.include  MotionSensor.h  README.md  README.rst  auto_calibration.c  auto_calibration.cc  auto_calibration.h  board_renderer.c  calibration_renderer.c  config.json.tmp  cube_texture_and_coords.h  device.c  device.h  gl_program.cc  gl_program.h  h265_encoder.c  h265_encoder.h  lunch.sh  manual_mpu.c  manual_mpu.h  menu.c  menu.h  mjpeg_decoder.cc  mjpeg_decoder.h  mrevent.c  mrevent.h  omxcv-impl.h  omxcv.cc  omxcv.cpp  omxcv.h  omxcv_jpeg.cc  omxcv_jpeg.cpp  picam360_capture.c  picam360_capture.h  picam360_capture_plugin.h  (+22 more)
MotionSensor/: Makefile  helper_3dmath.h  sensor.cc
glsl/: calibration.fsh  calibration.vsh  freetype.fsh  freetype.vsh
include/: auto_calibration.h  egl_handler.h  menu.h  menu_handler.h  mrevent.h  picam360_capture.h  picam360_capture_plugin.h  status_handler.h  stream_mixer.h  tools.h
libs/picam360-common/: CMakeLists.txt
libs/picam360-common/include/: gl_program.h  jpeg_loader.h  list.h  mrevent.h  picam360_image.h  png_loader.h  reference.h  tools.h
libs/picam360-common/include/mat4/: copy.h  fromQuat.h  fromRotationTranslation.h  frustum.h  identity.h  scale.h  transpose.h  type.h
libs/picam360-common/src/: jpeg_loader.c  picam360_image.c  png_loader.c  quaternion.c  reference.c  rtp.cc  tools.c
plugins/: CMakeLists.txt
plugins/driver_agent/: driver_agent.c  driver_agent.h  kokuyoseki.c  kokuyoseki.h  rtp.cc  rtp.h
plugins/equirectangular_renderer/: CMakeLists.txt  equirectangular_renderer.c
plugins/equirectangular_renderer/glsl/: equirectangular.fsh
plugins/ffmpeg_capture/: CMakeLists.txt  ffmpeg_capture.c  ffmpeg_capture.cpp
plugins/ffmpeg_decoder/: CMakeLists.txt  ffmpeg_decoder.c
plugins/fisheye_params/: CMakeLists.txt  fisheye_params.cpp
plugins/gst_decoder/: CMakeLists.txt  gst_decoder.c
plugins/gst_encoder/: CMakeLists.txt  gst_encoder.c  gst_encoder.h
plugins/h264_omx_decoder/: CMakeLists.txt
plugins/h265_encoder/: CMakeLists.txt  h265_encoder.c
plugins/image_recorder/: CMakeLists.txt  image_recorder.c
plugins/kokuyoseki/: Makefile  kokuyoseki.c  kokuyoseki.h
plugins/mjpeg_omx_decoder/: CMakeLists.txt  mjpeg_omx_decoder.cc  mjpeg_omx_decoder.h
plugins/mpu9250/: CMakeLists.txt  Makefile  Makefile.include  MotionSensor.h  mpu9250.c  mpu9250.h
plugins/mpu9250/I2Cdev/: I2Cdev.h
plugins/mpu9250/MotionSensor/: Makefile  MotionSensor.h  sensor.cc  sensor.h
plugins/mpu9250/MotionSensor/inv_mpu_lib/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
plugins/oculus_rift_dk2/: Makefile  oculus_rift_dk2.c  oculus_rift_dk2.h
plugins/oculus_rift_dk2/libovr_nsb/examples/: ovr-distort.frag
plugins/oculus_rift_dk2/libovr_nsb/libovr_nsb/: OVR_HID_hidapi.c
plugins/omx_capture/: CMakeLists.txt  omx_capture.c
plugins/omx_encoder/: CMakeLists.txt  omx_encoder.cc  omxcv-impl.h  omxcv.cc
plugins/opus_capture/: CMakeLists.txt  opus_capture.c
plugins/picam360map_renderer/: CMakeLists.txt  picam360map_renderer.c
plugins/picam360raspi/: CMakeLists.txt  create_plugin.cpp  equirectangular_gl_renderer.h  mjpeg_omx_decoder.cpp  mjpeg_omx_decoder.h  omx_encoder.h  omxcv-impl.h  picam360map_gl_renderer.h  window_gl_renderer.c  window_gl_renderer.h
plugins/picam360raspi/glsl/: equirectangular.fsh  equirectangular.vsh  picam360map.fsh  picam360map_packed_yuv.fsh  window.vsh
plugins/picam360raspi/lib/libomxjpeg/: CMakeLists.txt  jpeglib.h  omx_jpeg_compress.h  omx_jpeg_decompress.c  omx_jpeg_decompress.h  omxjpeg.h
plugins/picam360rpi/: CMakeLists.txt  create_plugin.cpp  create_plugin.h  equirectangular_gl_renderer.c  equirectangular_gl_renderer.h  menu_gl.c  menu_gl.h  mjpeg_omx_decoder.cpp  mjpeg_omx_encoder.cpp  mjpeg_omx_encoder.h  omx_encoder.cpp  omxcv.cpp  omxcv_jpeg.cpp  picam360map_gl_renderer.c  picam360map_gl_renderer.h  window_gl_renderer.h
plugins/picam360rpi/glsl/: picam360map.vsh  window.fsh
plugins/picam360rpi/lib/libomxjpeg/: CMakeLists.txt  jpeglib.h  omx_jpeg_compress.c  omx_jpeg_decompress.c  omxjpeg.c  omxjpeg.h
plugins/process_streamer/: CMakeLists.txt  process_streamer.cpp  process_streamer.h
plugins/rov_agent/: CMakeLists.txt  Makefile  config.json.tmp  rov_agent.c  rov_agent.h
plugins/rov_driver/: CMakeLists.txt  config.json.tmp
plugins/rtp_streamer/: CMakeLists.txt  rtp_streamer.c
plugins/usv_driver/: CMakeLists.txt  config.json.tmp  usv_driver.c
plugins/v4l2_capture/: CMakeLists.txt  v4l2_capture.c  v4l2_capture.cc  v4l2_capture.cpp  v4l2_handler.c  v4l2_handler.cpp  v4l2_handler.h
plugins/v4l2_capture/Linux_UVC_TestAP/: H264_UVC_TestAP.c  cap_desc.c  cap_desc.h  cap_desc_parser.c  cap_desc_parser.h  debug.h  h264_xu_ctrls.c  h264_xu_ctrls.h  nalu.c  v4l2uvc.c
plugins/video_reciever/: CMakeLists.txt  video_reciever.c
plugins/video_transmitter/: CMakeLists.txt  video_transmitter.c
plugins/view_point_multiplexor/: CMakeLists.txt  view_point_multiplexor.c
plugins/view_point_multiplexor/bson_packer/: index.js  package.json
plugins/view_point_multiplexor/frame_packer/: index.js
plugins/window_renderer/: CMakeLists.txt  window_renderer.c
plugins/window_renderer/glsl/: window.fsh
python_binding/: setup.py  test.py
setup/: .gitignore  10-oculus.rules  8mp.picam360rc  clean-up.sh  config.json  config.txt.800x480  config.txt.oculus  dhcpd.conf  hostapd.conf  init-device.sh  install.sh.in  interfaces  interfaces-dhcp-client  interfaces-dhcp-server  isc-dhcp-server  nodedebug-pf.service  picam360-capture.in  picam360-capture.service  picam360-capture.service.in  pythondebug-pf.service  rc.local  resize.pl  rov.picam360rc  set-oculus.sh  set-olucus.sh  setup-dhcp-client.sh  setup-dhcp-server.sh  setup-pf.sh  setup.sh  ssh-pf.service  ssh_config  unset-oculus.sh  wdr.picam360rc  wlan0-dhcp-client  wlan0-dhcp-server  www-pf.service
shader/: angular.vert  board.frag  calibration.frag  equirectangular.frag  equirectangular.vert  equirectangular_sphere.frag  equirectangular_sphere.vert  fisheye.frag  (+16 more)
(+51 files in other folders)
